edit: gatsby-config to fetch markdowns also from /content/sentenze and create pages

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,3 +16,13 @@ collections:
       - { name: title, label: Title }
       - { name: description, label: Description }
       - { name: body, label: Body, widget: markdown }
+  - name: sentenze
+    label: Sentenza
+    folder: content/sentenze
+    create: true
+    fields:
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: description, label: Description }
+      - { name: body, label: Body, widget: markdown }
